--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
   "description": "docker rest api testing",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "NODE_ENV=test jest --testTimeout=5000",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^29.5.3",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http": "0.0.1-security",
+    "jest": "^29.6.2",
     "mongoose": "^6.7.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sonar-scanner": "^3.1.0",
+    "sonarqube-scanner": "^3.0.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   }
 }
